[project]
name = "playground"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fire>=0.7.0",
    "gymnasium[box2d]>=1.0.0",
    "imageio>=2.36.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "torch>=2.5.1",
    "wandb>=0.19.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "jupyter>=1.1.1",
    "pylint>=3.3.2",
]

[tool.uv]
native-tls = true

[tool.black]
line-length = 120
target-version = ["py310"]
color = true

[tool.pylint.main]
disable = [
    "line-too-long",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "duplicate-code",
    "too-few-public-methods",
    "no-member",
    "fixme",
    "logging-too-many-args",
    "no-name-in-module",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "useless-parent-delegation"
]
ignore-paths = ["./.venv"]
logging-format-style = "new"
