[project]
name = "playground"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "fire>=0.7.0",
    "gymnasium[box2d]>=1.0.0",
    "imageio[ffmpeg,pyav]>=2.35.1",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "wandb[media]>=0.19.1",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "jupyter>=1.1.1",
    "pylint>=3.2.7",
]

[tool.uv]
native-tls = true

[tool.black]
line-length = 120
target-version = ["py310"]
color = true

[tool.pylint.main]
disable = [
    "line-too-long",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "duplicate-code",
    "too-few-public-methods",
    "no-member",
    "fixme",
    "logging-too-many-args",
    "no-name-in-module",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "useless-parent-delegation",
    "too-many-instance-attributes",
    "too-many-branches"
]
ignore-paths = ["./.venv"]
logging-format-style = "new"
